Fixed balance issue for modifying account

--- a/src/app/templates/accounts.html
+++ b/src/app/templates/accounts.html
@@ -185,6 +185,7 @@
     
                           <div class="form-group">
                             <input type="hidden" name="account-id" id="account-id">
+                            <input type="hidden" name="account-balance" id="account-balance">
                             <input type="submit" class="fw-input w-100 btn btn-primary" id="edit-account" name="edit-account" value="Изменить счет">
                           </div>
                         </div>
