--- a/app/src/app/templates/index.html
+++ b/app/src/app/templates/index.html
@@ -30,29 +30,36 @@
             <div class="card-body"> 
                 <form action="" method="POST" name="add-exp-form">
                         {{ add_exp_form.hidden_tag() }}
-                        <div class="form-row align-items-end">
-                            <div class="form-group col-sm-9">
+                        <div class="form-row align-items-end mb-2">
+                            <div class="form-group col-sm-8">
                                 <label class="font-weight-600" for="inlineFormInputAccount">Счет</label>
-                                {{ add_exp_form.account(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputAccount", placeholder="Счет") }}
+                                {{ add_exp_form.account(class="fw-input form-control", id="inlineFormInputAccount", placeholder="Счет") }}
                             </div>
-                            <div class="form-group col-sm-3">
-                                <label class="sr-only" for="inlineFormInputSumUAH">SumUAH</label>
-                                 {{ add_exp_form.sum_uah(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputSumUAH", placeholder="UAH", required="required") }}    
+                            <div class="form-group col-sm-4">
+                                <div class="input-group">
+                                 {{ add_exp_form.amount(class="fw-input form-control", id="inlineFormInputAmount", required="required") }} 
+                                 <div class="input-group-append">
+                                    {% for value in currency_group %}
+                                    <span class="input-group-text" style="display:none" data-id="{{value['id']}}">{{value['name']|upper}}</span>
+                                    {% endfor %}
+                                 </div>  
+                                </div>
+                                <input type="hidden" name="currency-id" id="currency-id">
                             </div>
                         </div>
                         <div class="form-row align-items-end">
-                                <div class="col-sm-9 mb-1">
+                                <div class="col-sm-8 mb-1">
                                     <label class="font-weight-600" for="сategory">Категория</label>
                                     {{ add_exp_form.category(class="fw-input form-control mb-2 mr-sm-2", placeholder="Выбрать категорию или добавить новую") }}
                                 </div>
-                                <div class="col-sm-3 mb-1">
+                                <div class="col-sm-4 mb-1">
                                     <label class="sr-only" for="inlineFormInputDate">Date</label>
                                     {{ add_exp_form.date(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputDate", placeholder="Дата", autocomplete="off") }}
                                 </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{ add_exp_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 {{ add_exp_form.submit(class="fw-input w-100 btn btn-primary mb-2", value="Добавить")}}
                             </div>
                         </div>
