added income and transaction forms in dashboard

--- a/app/src/app/templates/index.html
+++ b/app/src/app/templates/index.html
@@ -15,56 +15,134 @@
     <div class="col-12 col-md-3 col-xl-7 pt-3 pb-3">  
         <div class="card">
             <div class="card-header">
-                <ul class="nav nav-tabs card-header-tabs">
+                <ul class="nav nav-tabs card-header-tabs" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active text-danger" href="#">Добавить расходы</a>
+                        <a class="nav-link active text-danger" id="expenses-tab" data-toggle="tab" href="#expenses" role="tab" aria-controls="expenses" aria-selected="true">Добавить расходы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="#">Добавить доходы</a>
+                        <a class="nav-link text-success" id="incomes-tab" data-toggle="tab" href="#incomes" role="tab" aria-controls="incomes" aria-selected="true">Добавить доходы</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="#">Переводы</a>
+                        <a class="nav-link text-success" id="transfers-tab" data-toggle="tab" href="#transfers" role="tab" aria-controls="transfers" aria-selected="true">Переводы</a>
                     </li>
                 </ul>
-            </div>    
-            <div class="card-body"> 
-                <form action="" method="POST" name="add-exp-form">
-                        {{ add_exp_form.hidden_tag() }}
+            </div>
+            <div class="card-body tab-content">
+                <div  class="tab-pane fade show active" id="expenses" role="tabpanel" aria-labelledby="expenses-tab"> 
+                    <form action="" method="POST" name="add-exp-form">
+                            {{ add_exp_form.hidden_tag() }}
+                            <div class="form-row align-items-end mb-2">
+                                <div class="form-group col-sm-8">
+                                    <label class="font-weight-600" for="inlineFormInputAccount">Счет</label>
+                                    {{ add_exp_form.account(class="fw-input form-control", id="inlineFormInputAccount", placeholder="Счет") }}
+                                </div>
+                                <div class="form-group col-sm-4">
+                                    <div class="input-group">
+                                    {{ add_exp_form.amount(class="fw-input form-control", id="inlineFormInputAmount", required="required") }} 
+                                    <div class="input-group-append">
+                                        {% for value in currency_group %}
+                                        <span class="input-group-text" style="display:none" data-id="{{value['id']}}">{{value['name']|upper}}</span>
+                                        {% endfor %}
+                                    </div>  
+                                    </div>
+                                    <input type="hidden" name="currency-id" id="currency-id">
+                                </div>
+                            </div>
+                            <div class="form-row align-items-end">
+                                    <div class="col-sm-8 mb-1">
+                                        <label class="font-weight-600" for="сategory">Категория</label>
+                                        {{ add_exp_form.category(class="fw-input form-control mb-2 mr-sm-2", placeholder="Выбрать категорию или добавить новую") }}
+                                    </div>
+                                    <div class="col-sm-4 mb-1">
+                                        <label class="sr-only" for="inlineFormInputDate">Date</label>
+                                        {{ add_exp_form.date(class="fw-input form-control mb-2 mr-sm-2 inlineFormInputDate", id="inlineFormInputDate", placeholder="Дата", autocomplete="off") }}
+                                    </div>
+                                <div class="col-sm-8">
+                                    {{ add_exp_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
+                                </div>
+                                <div class="col-sm-4">
+                                    <button type="submit" class="fw-input w-100 btn btn-primary mb-2" name="add-expenses" value="Добавить расходы">Добавить расходы</button>
+                                </div>
+                            </div>
+                    </form>
+                </div>
+                <div  class="tab-pane fade" id="incomes" role="tabpanel" aria-labelledby="incomes-tab">
+                    <form action="" method="POST" name="add-exp-form">
+                                {{ add_exp_form.hidden_tag() }}
+                                <div class="form-row align-items-end mb-2">
+                                    <div class="form-group col-sm-8">
+                                        <label class="font-weight-600" for="inlineFormInputAccount">Счет</label>
+                                        {{ add_exp_form.account(class="fw-input form-control", id="inlineFormInputAccount", placeholder="Счет") }}
+                                    </div>
+                                    <div class="form-group col-sm-4">
+                                        <div class="input-group">
+                                        {{ add_exp_form.amount(class="fw-input form-control", id="inlineFormInputAmount", required="required") }} 
+                                        <div class="input-group-append">
+                                            {% for value in currency_group %}
+                                            <span class="input-group-text" style="display:none" data-id="{{value['id']}}">{{value['name']|upper}}</span>
+                                            {% endfor %}
+                                        </div>  
+                                        </div>
+                                        <input type="hidden" name="currency-id" id="currency-id">
+                                    </div>
+                                </div>
+                                <div class="form-row align-items-end">
+                                        <div class="col-sm-8 mb-1">
+                                            <label class="font-weight-600" for="сategory">Категория</label>
+                                            {{ add_exp_form.category(class="fw-input form-control mb-2 mr-sm-2", placeholder="Выбрать категорию или добавить новую") }}
+                                        </div>
+                                        <div class="col-sm-4 mb-1">
+                                            <label class="sr-only" for="inlineFormInputIncomesDate">Date</label>
+                                            {{ add_exp_form.date(class="fw-input form-control mb-2 mr-sm-2 inlineFormInputDate", id="inlineFormInputIncomesDate", placeholder="Дата", autocomplete="off") }}
+                                        </div>
+                                    <div class="col-sm-8">
+                                        {{ add_exp_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <button type="submit" class="fw-input w-100 btn btn-primary mb-2" name="add-incomes" value="Добавить доходы">Добавить доходы</button>
+                                    </div>
+                                </div>
+                    </form>
+                </div>
+                <div  class="tab-pane fade" id="transfers" role="tabpanel" aria-labelledby="transfers-tab">
+                    <form action="" method="POST" name="add-exp-form">
+                        {{ add_transfer_form.hidden_tag() }}
                         <div class="form-row align-items-end mb-2">
                             <div class="form-group col-sm-8">
-                                <label class="font-weight-600" for="inlineFormInputAccount">Счет</label>
-                                {{ add_exp_form.account(class="fw-input form-control", id="inlineFormInputAccount", placeholder="Счет") }}
+                                <label class="font-weight-600" for="inlineFormInputAccount">Со счета</label>
+                                {{ add_transfer_form.inputaccount(class="fw-input form-control", id="inlineFormInputAccount", placeholder="Со счета") }}
                             </div>
                             <div class="form-group col-sm-4">
                                 <div class="input-group">
-                                 {{ add_exp_form.amount(class="fw-input form-control", id="inlineFormInputAmount", required="required") }} 
-                                 <div class="input-group-append">
+                                {{ add_transfer_form.amount(class="fw-input form-control", id="inlineFormInputAmount", required="required") }} 
+                                <div class="input-group-append">
                                     {% for value in currency_group %}
                                     <span class="input-group-text" style="display:none" data-id="{{value['id']}}">{{value['name']|upper}}</span>
                                     {% endfor %}
-                                 </div>  
+                                </div>  
                                 </div>
                                 <input type="hidden" name="currency-id" id="currency-id">
                             </div>
                         </div>
                         <div class="form-row align-items-end">
                                 <div class="col-sm-8 mb-1">
-                                    <label class="font-weight-600" for="сategory">Категория</label>
-                                    {{ add_exp_form.category(class="fw-input form-control mb-2 mr-sm-2", placeholder="Выбрать категорию или добавить новую") }}
+                                    <label class="font-weight-600" for="inlineFormOutputAccount">На счет</label>
+                                    {{ add_transfer_form.outputaccount(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormOutputAccount", placeholder="На счет") }}
                                 </div>
                                 <div class="col-sm-4 mb-1">
-                                    <label class="sr-only" for="inlineFormInputDate">Date</label>
-                                    {{ add_exp_form.date(class="fw-input form-control mb-2 mr-sm-2", id="inlineFormInputDate", placeholder="Дата", autocomplete="off") }}
+                                    <label class="sr-only" for="inlineFormInputIncomesDate">Date</label>
+                                    {{ add_transfer_form.date(class="fw-input form-control mb-2 mr-sm-2 inlineFormInputDate", id="inlineFormInputIncomesDate", placeholder="Дата", autocomplete="off") }}
                                 </div>
                             <div class="col-sm-8">
-                                {{ add_exp_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
+                                {{ add_transfer_form.categorydes(class="fw-input form-control mb-2 mr-sm-2", placeholder="Описание")}}
                             </div>
                             <div class="col-sm-4">
-                                {{ add_exp_form.submit(class="fw-input w-100 btn btn-primary mb-2", value="Добавить")}}
+                                <button type="submit" class="fw-input w-100 btn btn-primary mb-2" name="add-transfer" value="Сделать трансфер">Сделать трансфер</button>
                             </div>
                         </div>
-                </form>
-            </div>  
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
