added transaction between accounts

--- a/app/src/app/templates/index.html
+++ b/app/src/app/templates/index.html
@@ -110,7 +110,7 @@
                         <div class="form-row align-items-end mb-2">
                             <div class="form-group col-sm-8">
                                 <label class="font-weight-600" for="TransferFormInputAccount">Со счета</label>
-                                {{ add_transfer_form.inputaccount(class="fw-input form-control", id="TransferFormInputAccount", placeholder="Со счета") }}
+                                {{ add_transfer_form.account(class="fw-input form-control", id="TransferFormInputAccount", placeholder="Со счета") }}
                             </div>
                             <div class="form-group col-sm-4">
                                 <div class="input-group">
